DotEnv for API TTL, some readme

--- a/.env.dist
+++ b/.env.dist
@@ -43,6 +43,8 @@ MAILER_ENCRYPTION=
 APP_ENV=dev
 APP_DEBUG=1
 APP_CACHE=0
+# Api HTTP cache TTL in minutes
+APP_API_CACHE_TTL=5
 APP_NAMESPACE=headless
 APP_TIMEZONE=Europe/Paris
 APP_SECURITY_SESSION_NAME=headless_token
