--- a/src/Resources/routes.yml
+++ b/src/Resources/routes.yml
@@ -1,1 +1,8 @@
 ---
+api_contact_form:
+    methods: [POST]
+    path: /api/1.0/forms/contact
+    defaults:
+        _controller: App\Controller\ContactFormController::formAction
+        _locale: en
+        _format: json
