--- a/src/Resources/routes.yml
+++ b/src/Resources/routes.yml
@@ -1,6 +1,7 @@
 ---
 api_contact_form:
     methods: [POST]
+    # Configure path behind Firewall prefix…
     path: /api/1.0/forms/contact
     defaults:
         _controller: App\Controller\ContactFormController::formAction
