--- a/.dockerignore
+++ b/.dockerignore
@@ -36,6 +36,8 @@ pimple.json
 !app/gen-src/Proxies/.gitignore
 !docker/php74-nginx-alpine/crontab.txt
 !docker/php74-nginx-alpine/before_launch.sh
+!docker/php-nginx-alpine/crontab.txt
+!docker/php-nginx-alpine/before_launch.sh
 !themes/BaseTheme/static
 !themes/BaseTheme/Resources/views/partials/*
 !themes/BaseTheme/Resources/views/base.html.twig
