Use php80 for runners

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: roadiz/php74-runner
+image: roadiz/php80-runner
 
 stages:
     - test
@@ -12,7 +12,7 @@ variables:
 
 example_test:
     stage: test
-    image: roadiz/php74-runner
+    image: roadiz/php80-runner
     interruptible: true
     only:
         - develop
@@ -29,7 +29,7 @@ example_test:
 
 example_build:
     stage: build
-    image: roadiz/php74-runner
+    image: roadiz/php80-runner
     interruptible: true
     only:
         - develop
@@ -68,12 +68,12 @@ example_build:
 
 example_dev_docker:
     stage: deploy
-    image: docker:19.03-git
+    image: docker:git
     # Create a docker image only when a new tag is pushed
     only:
         - develop
     services:
-        - docker:19.03-dind
+        - docker:dind
     variables:
         DOCKER_DRIVER: overlay2
         DOCKER_TLS_CERTDIR: "/certs"
@@ -100,12 +100,12 @@ example_dev_docker:
 #
 example_docker:
     stage: deploy
-    image: docker:19.03-git
+    image: docker:git
     # Create a docker image only when a new tag is pushed
     only:
         - tags
     services:
-        - docker:19.03-dind
+        - docker:dind
     variables:
         DOCKER_DRIVER: overlay2
         DOCKER_TLS_CERTDIR: "/certs"
