--- a/samples/install.php.sample
+++ b/samples/install.php.sample
@@ -1,6 +1,7 @@
 <?php
 declare(strict_types=1);
 
+use App\AppKernel;
 use RZ\Roadiz\Core\HttpFoundation\Request;
 use Symfony\Component\ErrorHandler\Debug;
 
