--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "roadiz/markdown": "~1.6.0 || dev-develop",
         "roadiz/abstract-api-theme": "~1.6.0 || dev-develop",
         "roadiz/entity-generator": "~1.6.0 || dev-main",
+        "roadiz/random": "~1.6.0 || dev-main",
         "rezozero/tree-walker": "~0.8.4",
         "symfony/rate-limiter": "^5.2"
     },
