--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,8 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "roadiz/roadiz": "~1.6.0 || dev-develop",
-        "roadiz/models": "~1.6.0 || dev-develop",
-        "roadiz/documents": "~1.6.0 || dev-develop",
-        "roadiz/markdown": "~1.6.0 || dev-develop",
-        "roadiz/abstract-api-theme": "~1.6.0 || dev-develop",
-        "roadiz/entity-generator": "~1.6.0 || dev-main",
-        "roadiz/random": "~1.6.0 || dev-main",
+        "roadiz/roadiz": "~1.6.0",
+        "roadiz/abstract-api-theme": "~3.0.0",
         "rezozero/tree-walker": "~0.8.4",
         "symfony/rate-limiter": "^5.2"
     },
