Node-types and exclusion property

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,8 @@ example_test:
     script:
         - composer install --no-scripts
         - composer run-script post-install-cmd
-        - vendor/bin/phpcs
-        - vendor/bin/phpstan analyse -c phpstan.neon -l max src
+        - php -d memory_limit=-1 vendor/bin/phpcs
+        - php -d memory_limit=-1 vendor/bin/phpstan analyse -c phpstan.neon -l max src
 
 example_build:
     stage: build
