Trigger Blackfire by Header for Postman usage

--- a/samples/dev.php.sample
+++ b/samples/dev.php.sample
@@ -24,6 +24,25 @@ if (isset($_SERVER['HTTP_CLIENT_IP'])
 
 require(dirname(__DIR__) . "/app/bootstrap.php");
 
+/*
+ * Trigger Blackfire by Header for API / Postman usage
+ * @see https://blackfire.io/docs/integrations/postman
+ * composer require blackfire/php-sdk
+ */
+// If the header is set
+//if (isset($_SERVER['HTTP_BLACKFIRETRIGGER'])) {
+//    // let's create a client
+//    $blackfire = new \Blackfire\Client();
+//    // then start the probe
+//    $probe = $blackfire->createProbe();
+//
+//    // When runtime shuts down, let's finish the profiling session
+//    register_shutdown_function(function () use ($blackfire, $probe) {
+//        // See the PHP SDK documentation for using the $profile object
+//        $profile = $blackfire->endProbe($probe);
+//    });
+//}
+
 Debug::enable();
 
 // Use DevAppKernel on Vagrant box to use a cache dir not
