--- a/docker/php-nginx-alpine/zz-docker.conf
+++ b/docker/php-nginx-alpine/zz-docker.conf
@@ -8,6 +8,13 @@ listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
 
+; https://spot13.com/pmcalculator/
+pm.max_children = 25
+pm.start_servers = 6
+pm.min_spare_servers = 6
+pm.max_spare_servers = 18
+pm.max_requests = 1000
+
 listen = /var/run/php-fpm.sock
 
 php_admin_value[error_log] = /dev/stderr
