--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,12 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "roadiz/roadiz": "~1.6.7",
-        "roadiz/abstract-api-theme": "~3.1.12",
+        "roadiz/roadiz": "dev-develop",
+        "roadiz/abstract-api-theme": "dev-develop",
+        "roadiz/dts-generator": "dev-main",
+        "roadiz/nodetype-contracts": "dev-main",
+        "roadiz/doc-generator": "dev-main",
+        "roadiz/entity-generator": "dev-main",
         "rezozero/tree-walker": "~0.8.4",
         "symfony/rate-limiter": "^5.2"
     },
