--- a/.env.dist
+++ b/.env.dist
@@ -58,6 +58,8 @@ APP_ASSETS_DRIVER=gd
 APP_ASSETS_DEFAULT_QUALITY=90
 APP_ASSETS_MAX_PIXEL_SIZE=2500
 
+APP_MESSENGER_DEFAULT_TRANSPORT_DSN=sync://
+
 # Docker networking DEV ONLY
 DEFAULT_GATEWAY=172.22.0.1
 
