--- a/app/conf/config.default.yml
+++ b/app/conf/config.default.yml
@@ -56,6 +56,26 @@ assetsProcessing:
     jpegoptimPath: /usr/bin/jpegoptim
     pngquantPath: /usr/bin/pngquant
     subscribers: []
+
+#
+# Messenger non-default configuration
+#
+messenger:
+    failure_transport: 'failed_default'
+    transports:
+        default:
+            dsn: '%env(string:APP_MESSENGER_DEFAULT_TRANSPORT_DSN)%'
+            options: []
+        async:
+            dsn: 'doctrine://default?queue_name=async'
+            options: []
+        failed_default:
+            dsn: 'doctrine://default?queue_name=failed_default'
+            options: []
+#    routing:
+#        RZ\Roadiz\Message\GuzzleRequestMessage: async
+
+
 #
 # Solr endpoint example
 #
