--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": ">=7.4",
         "roadiz/roadiz": "dev-develop",
+        "roadiz/documents": "dev-develop",
         "roadiz/abstract-api-theme": "dev-develop",
         "roadiz/dts-generator": "dev-main",
         "roadiz/nodetype-contracts": "dev-main",
