--- a/docker/php-nginx-alpine/supervisor.ini
+++ b/docker/php-nginx-alpine/supervisor.ini
@@ -27,11 +27,11 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 ;/etc/supervisor/conf.d/messenger-worker.conf
-;[program:messenger-consume]
-;command=php -d "memory_limit=-1" /var/www/html/bin/roadiz messenger:consume messenger.transports.async --time-limit=1800
-;user=www-data
-;numprocs=2
-;startsecs=0
-;autostart=true
-;autorestart=true
-;process_name=%(program_name)s_%(process_num)02d
+[program:messenger-consume]
+command=php -d "memory_limit=-1" /var/www/html/bin/roadiz messenger:consume messenger.transports.async --time-limit=1800
+user=www-data
+numprocs=2
+startsecs=0
+autostart=true
+autorestart=true
+process_name=%(program_name)s_%(process_num)02d
