--- a/.dockerignore
+++ b/.dockerignore
@@ -28,6 +28,8 @@ app/logs/*
 app/cache/*
 app/gen-src/*
 app/conf/config.yml
+app/conf/default.key
+app/conf/default.pub.key
 app/*.zip
 app/*.sql
 app/*.tar.gz
@@ -51,7 +53,7 @@ pimple.json
 !app/gen-src/GeneratedNodeSources/.gitignore
 !app/gen-src/Proxies/.gitignore
 !docker/php-nginx-alpine/crontab.txt
-!docker/php-nginx-alpine/supervisord.ini
+!docker/php-nginx-alpine/supervisor.ini
 !docker/php-nginx-alpine/before_launch.sh
 !themes/BaseTheme/static
 !themes/BaseTheme/Resources/views/partials/*
