--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "roadiz/rozier": "dev-develop",
         "roadiz/models": "dev-develop",
         "roadiz/documents": "dev-develop",
-        "roadiz/openid": "~1.7.0 || dev-main",
+        "roadiz/openid": "~1.7.0 || dev-develop",
+        "roadiz/jwt": "~1.7.0 || dev-main",
+        "roadiz/random": "~1.7.0 || dev-main",
         "roadiz/markdown": "~1.7.0 || dev-develop",
         "roadiz/abstract-api-theme": "dev-develop",
         "roadiz/dts-generator": "dev-main",
+        "roadiz/doc-generator": "dev-develop",
         "roadiz/nodetype-contracts": "dev-main",
-        "roadiz/doc-generator": "dev-main",
         "roadiz/entity-generator": "dev-main",
         "rezozero/tree-walker": "~0.8.4",
         "symfony/rate-limiter": "^5.2"
